@@ -1,7 +1,7 @@
 DBMail THANKS file
 
 DBMail has originally been written by Eelco van Beek, Roel Rozendaal
-and Ilja Booij. Development since 2.0 is lead by Paul J Stevens and 
+and Ilja Booij. Development since 2.0 is led by Paul J Stevens and 
 Aaron Stone.
 
 Special thanks to Metaways.net for providing resources so dbmail runs
@@ -25,10 +25,12 @@ Javier Carlos		javier at nediam dot com dot mx
 Jesse Norrel		jesse at kci dot net
 Leif Jackson		ljackson at jjcons dot com
 Lars Kneschke		l.kneschke at metaways dot net
+Kaname			kaname at conga.jp
 Matthew Sayler		sayler at speedsite.com
 Paul F De La Cruz	polito at blackbeanie dot net
 Paul J Stevens		paul at nfg dot nl
 Ryan Butler		rbutler at adiis dot net
+Ryo HAYAKAWA		ryo at fastriver.net
 Steven Kroon		steven at stevenkroon dot com
 Thomas Mueller		dbmail at tmueller dot com
 Timo Sirainen		tss at iki dot fi
