@@ -205,5 +205,17 @@ CREATE TABLE dbmail_usermap (
 
 CREATE UNIQUE INDEX usermap_idx_1 ON dbmail_usermap(login, sock_allow, userid);
 
+DROP TABLE IF EXISTS `dbmail_envelope`;
+CREATE TABLE `dbmail_envelope` (
+  `physmessage_id` bigint(20) NOT NULL default '0',
+  `id` bigint(20) NOT NULL auto_increment,
+  `envelope` text NOT NULL,
+  PRIMARY KEY  (`id`),
+  KEY `physmessage_id` (`physmessage_id`),
+  CONSTRAINT `dbmail_envelope_ibfk_1` FOREIGN KEY (`physmessage_id`) 
+  	REFERENCES `dbmail_physmessage` (`id`) 
+	ON DELETE CASCADE ON UPDATE CASCADE
+) ENGINE=InnoDB DEFAULT CHARSET=latin1;
 
 SET FOREIGN_KEY_CHECKS=1;
+
