@@ -225,3 +225,15 @@ CREATE TABLE dbmail_usermap(
 
 CREATE UNIQUE INDEX usermap_idx_1 ON dbmail_usermap(login, sock_allow, userid);
 
+CREATE SEQUENCE dbmail_envelope_idnr_seq;
+CREATE TABLE dbmail_envelope (
+        physmessage_id  INT8 NOT NULL
+			REFERENCES dbmail_physmessage(id)
+			ON UPDATE CASCADE ON DELETE CASCADE,
+	id		INT8 DEFAULT nextval('dbmail_envelope_idnr_seq'),
+	envelope	TEXT NOT NULL DEFAULT '',
+	PRIMARY KEY (id)
+);
+CREATE UNIQUE INDEX dbmail_envelope_1 ON dbmail_envelope(physmessage_id, id);
+
+
